# VoidBot

./: .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.txt  backlog.md  package-lock.json  package.json  tsconfig.json
src/: commands.rs  index.ts  main.rs  util.rs
src/commands/: config.rs  default_voice.rs  emote.rs  emotes.rs  filter-links.ts  index.ts  list-emotes.ts  mod.rs  react.rs  react.ts  say.rs  say.ts  stream.rs  test.ts  time.rs  voice.rs  welcome.rs
src/commands/emote/: emote_registry.rs  emotes.rs  mod.rs  react.rs  say.rs
src/commands/util/: mod.rs
src/database/: core.rs  structs.rs
src/database/migrations/: 0.sql
src/database/structs/: default_vc_names.rs  emote_registry.rs  guild.rs  mod.rs  user.rs
src/modules/: emote-registry.ts  event_handler.rs  events.ts  globals.ts  message-intercept.ts  mod.rs  register.ts  shared_data.rs  slash_commands.rs
src/util/: emotes.ts  lib.test.ts  lib.ts  libd.ts
