[package]
name = "voidbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3.28"
regex = "1"
serenity = { version = "0.11.5", default-features = false, features = ["cache", "client", "gateway", "model", "rustls_backend", "utils"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
